--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ SmartPhone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 	<div class="navigation">
 		<div class="container">
 			<div class="agileits-logo">
-				<div>&nbsp;&nbsp;&nbsp;<img src="images/Mandap.png" style="height: 60px;width: 150px;"></div>
+				<h1><a href="index.html" style="margin-right: -250px"><span style="margin-right: -10px;">The</span>Mandap</a></h1> 
 			</div>
 			<nav class="navbar navbar-default">
 				<!-- Brand and toggle get grouped for better mobile display -->
